<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home_page"
        android:background="@color/colorDarkblue">

    <Button
            android:text="@string/active_requests"
            android:layout_width="265dp"
            android:layout_height="125dp" android:id="@+id/btnActive"
            app:layout_constraintBottom_toTopOf="@+id/btnPast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:iconTint="#733535" android:backgroundTint="#7B00E3"
            android:background="#651F1F"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.875"
    />
    <TextView
            android:text="@string/local_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.028"
            android:textSize="36sp" android:textStyle="normal|bold" android:textColorLink="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif-condensed-light"/>
    <Button
            android:text="@string/raise_a_request"
            android:layout_width="266dp"
            android:layout_height="115dp" android:id="@+id/btnRaise"
            app:layout_constraintBottom_toTopOf="@+id/btnActive"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintVertical_bias="0.757"/>
    <Button
            android:text="@string/past_requests"
            android:layout_width="271dp"
            android:layout_height="128dp" android:id="@+id/btnPast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.842"/>
</androidx.constraintlayout.widget.ConstraintLayout>