<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:background="@color/colorDarkblue">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">


        <TextView
                android:text="@string/from"
                android:layout_width="46dp"
                android:layout_height="22dp" android:id="@+id/textView11"
                android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView12"
                android:layout_marginStart="44dp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:textSize="16sp" android:textColor="@color/black"/>
        <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/dashboard"
                android:textSize="30sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="52dp" android:textColor="#080E32"
                android:fontFamily="@font/baloo"/>
        <TextView
                android:id="@+id/tvTotal"
                android:layout_width="112dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:text="Total requests: 99"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:textColor="#080E32"
                app:layout_constraintEnd_toStartOf="@+id/textView12" android:layout_marginEnd="92dp"
                android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="408dp"
                android:layout_height="199dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFilter"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:background="#F1F2F4">

                    <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="Plumbing"
                            android:textSize="24sp" android:textColor="#949EB1"/>
                    <TextView
                            android:text="Active request: 99 \nCompleted requests: 99  \nTotal requests: 99"
                            android:layout_width="match_parent"
                            android:layout_height="93dp" android:id="@+id/tvPlumbing"
                            android:layout_marginTop="62dp" android:layout_alignParentTop="true"
                            android:paddingLeft="10dp" android:textColor="#080E32" android:textSize="15sp"/>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:background="#F1F2F4">

                    <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/electrical"
                            android:textSize="24sp" android:textColor="#949EB1"/>
                    <TextView
                            android:text="Active request: 99 \nCompleted requests: 99  \nTotal requests: 99"
                            android:layout_width="match_parent"
                            android:layout_height="95dp" android:id="@+id/tvElectrical"
                            android:layout_marginTop="64dp" android:layout_alignParentTop="true"
                            android:paddingLeft="10dp" android:textColor="#080E32" android:textSize="15sp"
                            tools:ignore="RtlHardcoded,RtlSymmetry"/>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="407dp"
                android:layout_height="243dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:background="#F1F2F4">

                    <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/gardening"
                            android:textSize="24sp"
                            android:textColor="#949EB1"/>
                    <TextView
                            android:text="Active request: 99 \nCompleted requests: 99  \nTotal requests: 99"
                            android:layout_width="match_parent"
                            android:layout_height="142dp" android:id="@+id/tvGardening"
                            android:layout_marginTop="61dp" android:layout_alignParentTop="true"
                            android:paddingLeft="10dp" android:textColor="#080E32" android:textSize="15sp"
                            tools:ignore="RtlHardcoded,RtlSymmetry"/>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:background="#F1F2F4">

                    <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/carpentry"
                            android:textSize="24sp"
                            android:textColor="#949EB1"/>
                    <TextView
                            android:text="Active request: 99 \nCompleted requests: 99  \nTotal requests: 99"
                            android:layout_width="match_parent"
                            android:layout_height="138dp" android:id="@+id/tvCarpentry"
                            android:layout_marginTop="62dp" android:layout_alignParentTop="true"
                            android:paddingStart="10dp" android:textColor="#080E32" android:textSize="15sp"
                            tools:ignore="RtlSymmetry"/>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <TextView
                android:text="@string/generate_report"
                android:layout_width="132dp"
                android:layout_height="wrap_content" android:id="@+id/btnToreport"
                android:textSize="16sp" android:textColor="@color/colorTextLightBlue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/filter_by_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                android:textSize="16sp"
                android:fontFamily="@font/baloo" android:textColor="@color/black" android:layout_marginEnd="62dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17dp" android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toTopOf="@+id/dateFrom" android:layout_marginStart="119dp"
                app:layout_constraintStart_toEndOf="@+id/btnToreport"/>
        <TextView
                android:text="@string/to"
                android:layout_width="28dp"
                android:layout_height="22dp" android:id="@+id/textView12"
                android:layout_marginBottom="55dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginStart="44dp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:textSize="16sp" android:textColor="@color/black"/>
        <EditText
                android:layout_width="109dp"
                android:layout_height="36dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dateFrom"
                android:layout_marginEnd="41dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="1dp" app:layout_constraintStart_toEndOf="@+id/textView11"
                android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:layout_marginBottom="7dp" app:layout_constraintBottom_toTopOf="@+id/dateTo"

                android:textSize="14sp" android:hint="@string/yyyy_mm_dd"/>
        <EditText
                android:layout_width="114dp"
                android:layout_height="37dp"
                android:ems="10"
                android:inputType="date"
                android:id="@+id/dateTo"
                app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/dateFrom" android:layout_marginBottom="54dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                android:hint="@string/yyyy_mm_dd" android:textSize="14sp"
                android:layout_marginStart="16dp" android:layout_marginEnd="42dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/filter"
                android:layout_width="116dp"
                android:layout_height="41dp" android:id="@+id/btnFilter"
                android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginStart="109dp"
                app:layout_constraintStart_toEndOf="@+id/tvTotal" android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@+id/dateTo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>